--- a/templates/docker_file.jinja2
+++ b/templates/docker_file.jinja2
@@ -60,9 +60,9 @@ WORKDIR $HOME
 {{ install([ 'nodejs', 'npm' ]) }}
 
 ENV NPM_PACKAGES "$HOME/.npm-packages"
-{{ add_to_path('$NPM_PACKAGES') }}
+{{ add_to_path('$NPM_PACKAGES/bin') }}
 ENV MANPATH $NPM_PACKAGES/share/man:$MANPATH
 
-RUN mkdir "$NPM_PACKAGES"
+RUN mkdir -p "$NPM_PACKAGES"
 RUN npm config set prefix "$NPM_PACKAGES"
 {% endmacro %}
