--- a/templates/password_gen.jinja2
+++ b/templates/password_gen.jinja2
@@ -1,3 +1,16 @@
+{#
+    IN:
+        name: string
+        length: number
+#}
 {% macro pw(name, length=40) -%}
 {{ lookup('password', name + '_password.txt chars=ascii_letters,digits,hexdigits,punctuation length=' + length|string) }}
 {%- endmacro %}
+
+{#
+    IN:
+        name: string
+#}
+{% macro read_from_file(name) -%}
+{{lookup('file', 'static_' + name + '_password.txt')|trim}}
+{%- endmacro -%}
