--- a/templates/docker/network.jinja2
+++ b/templates/docker/network.jinja2
@@ -29,7 +29,7 @@ networks:
 
 {% macro discovery_network_section() %}
 networks:
-  {{ discovery_network.name }}:
+  {{ network_names.discovery }}:
 {% endmacro %}
 
 {#
