--- a/templates/traefik/common.jinja2
+++ b/templates/traefik/common.jinja2
@@ -1,4 +1,4 @@
 {% macro enable(name) %}
 - "traefik.enable=true"
-- "traefik.docker.network={{ discovery_network.name }}"
+- "traefik.docker.network={{ network_names.discovery }}"
 {% endmacro %}
