--- a/templates/password_gen.jinja2
+++ b/templates/password_gen.jinja2
@@ -7,10 +7,14 @@
 {{ lookup('password', name + '_password.txt chars=ascii_letters,digits,hexdigits,punctuation length=' + length|string) }}
 {%- endmacro %}
 
+{% macro pw_alt_templating(name, length=40) -%}
+|| lookup('password', name + '_password.txt chars=ascii_letters,digits,hexdigits,punctuation length=' + length|string) ||
+{%- endmacro %}
+
 {#
     IN:
         name: string
 #}
 {% macro read_from_file(name) -%}
-{{lookup('file', 'static_' + name + '_password.txt')|trim}}
+{{ lookup('file', 'static_' + name + '_password.txt')|trim }}
 {%- endmacro -%}
