Do not port map, openvpn, dns, and other via docker, use traefik instead

--- a/templates/docker/misc.jinja2
+++ b/templates/docker/misc.jinja2
@@ -1,7 +1,9 @@
 {% macro common() %}
-{% raw %}
-restart: always
-{% endraw %}
+{% if is_dev %}
+{##}restart: unless-stopped
+{% else %}
+{##}restart: always
+{% endif %}
 {% endmacro %}
 
 {#
