Add TURN server to matrix stack

--- a/templates/password_gen.jinja2
+++ b/templates/password_gen.jinja2
@@ -1,10 +1,49 @@
 {#
     IN:
         name: string
+        chars: string
+        length: number
+#}
+{% macro pw_chars(name, chars, length=40) -%}
+{{ lookup('password', name + '_password.txt chars=' + chars + ' length=' + length|string) }}
+{%- endmacro %}
+
+{#
+    IN:
+        name: string
+        chars: string
+        length: number
+#}
+{% macro pw_chars_alt(name, chars, length=40) -%}
+|| lookup('password', name + '_password.txt chars=' + chars + ' length=' + length|string) ||
+{%- endmacro %}
+
+{#
+    IN:
+        name: string
+        length: number
+#}
+{% macro pw_letters(name, length=40) -%}
+{{ pw_chars(name, 'ascii_letters' , length) }}
+{%- endmacro %}
+
+{#
+    IN:
+        name: string
+        length: number
+#}
+{% macro pw_letters_alt(name, length=40) -%}
+|| pw_chars_alt(name, 'ascii_letters' , length) ||
+{%- endmacro %}
+
+
+{#
+    IN:
+        name: string
         length: number
 #}
 {% macro pw(name, length=40) -%}
-{{ lookup('password', name + '_password.txt chars=ascii_letters,digits,hexdigits,punctuation length=' + length|string) }}
+{{ pw_chars(name, 'ascii_letters,digits,hexdigits,punctuation' , length) }}
 {%- endmacro %}
 
 {% macro pw_alt_templating(name, length=40) -%}
