--- a/templates/docker/network.jinja2
+++ b/templates/docker/network.jinja2
@@ -5,9 +5,10 @@ networks:
 {% if network.v4 is not defined %}
   {{ network.name }}:
     external: true
+    scope: swarm
 {% else %}
   {{ network.name }}:
-    driver: bridge
+    driver: overlay
 {%  if use_v6 %}
     driver_opts:
       com.docker.network.enable_ipv6: "true"
